tests/rosetta/out/C/abbreviations-automatic.error
cc: exit status 1
/tmp/abbreviations-automatic.c: In function ‘distinct’:
/tmp/abbreviations-automatic.c:166:11: error: incompatible types when initializing type ‘int’ using type ‘map_string_int’
  166 |   int m = tmp6;
      |           ^~~~
/tmp/abbreviations-automatic.c:171:13: error: expected ‘)’ before ‘in’
  171 |     if ((!(x in m))) {
      |           ~ ^~~
      |             )
/tmp/abbreviations-automatic.c:172:8: error: request for member ‘data’ in something not a structure or union
  172 |       m.data[x] = 1;
      |        ^
/tmp/abbreviations-automatic.c: In function ‘mochi_main’:
/tmp/abbreviations-automatic.c:377:14: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
  377 |     printf("%d\n", tmp16);
      |             ~^     ~~~~~
      |              |     |
      |              int   char *
      |             %s
